# aureus-core

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  SECURITY.md  libbitcoinkernel.pc.in  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: ci.yml
.tx/: config
ci/: lint.py  lint_imagefile  test_imagefile  test_run_all.sh
ci/lint/: 01_install.sh  06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_cross_intel.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_alpine_musl.sh  00_setup_env_native_asan.sh  00_setup_env_native_chimera_lto.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_iwyu.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  00_setup_env_win64_msvcrt.sh  01_base_install.sh  02_run_container.py  03_test_script.sh  GetCMakeLogFiles.cmake  wrap-valgrind.sh
cmake/: aureus-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  windows-app.manifest.in
cmake/module/: AddBoostIfNeeded.cmake  AddWindowsResources.cmake  CheckLinkerSupportsPIE.cmake  CheckSourceCompilesWithFlags.cmake  FindLibevent.cmake  FindQRencode.cmake  FindQt.cmake  FindUSDT.cmake  FindZeroMQ.cmake  FlagsSummary.cmake  GenerateSetupNsi.cmake  GetTargetInterface.cmake  InstallBinaryComponent.cmake  Maintenance.cmake  ProcessConfigurations.cmake  TargetDataSources.cmake  TestAppendRequiredLibraries.cmake  TryAppendCXXFlags.cmake  TryAppendLinkerFlag.cmake  WarnAboutGlobalProperties.cmake
cmake/script/: Coverage.cmake  CoverageFuzz.cmake  CoverageInclude.cmake.in  GenerateBuildInfo.cmake  GenerateHeaderFromJson.cmake  GenerateHeaderFromRaw.cmake  cov_tool_wrapper.sh.in  macos_zip.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
contrib/asmap/: README.md  asmap-tool.py
contrib/debian/: copyright
contrib/devtools/: README.md  check-deps.sh  circular-dependencies.py  gen-bitcoin-conf.sh  gen-manpages.py  headerssync-params.py
contrib/devtools/bitcoin-tidy/: CMakeLists.txt  README.md  bitcoin-tidy.cpp  nontrivial-threadlocal.cpp  nontrivial-threadlocal.h
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-clean  guix-codesign  guix-verify  manifest.scm  security-check.py  symbol-check.py
contrib/init/: README.md  bitcoind.conf  bitcoind.init  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service  org.bitcoin.bitcoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-create.sh  macdeployqtplus
contrib/message-capture/: message-capture-docs.md  message-capture-parser.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt
contrib/signet/: README.md  getcoins.py  miner
contrib/testgen/: README.md  gen_key_io_test_vectors.py
contrib/tracing/: README.md  connectblock_benchmark.bt  log_p2p_connections.bt  log_p2p_traffic.bt  log_raw_p2p_msgs.py  log_utxocache_flush.py  log_utxos.bt  mempool_monitor.py  p2p_monitor.py
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-33629.md  (+9 more)
share/: setup.nsi.in
src/: .clang-format  .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  aureus-cli.cpp  aureus-tx.cpp  aureus-util.cpp  aureus-wallet.cpp  aureus.cpp  aureusd.cpp  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-res.rc  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind-res.rc  bitcoind.cpp  (+129 more)
src/ipc/test/: CMakeLists.txt  ipc_test.capnp  ipc_test.cpp  ipc_test.h  ipc_test_types.h  ipc_tests.cpp
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h  blockmanager_opts.h  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  types.h  warning.h
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
test/: CMakeLists.txt  README.md  config.ini.in  get_previous_releases.py
(+1629 files in other folders)
